--- a/todo/www/index.html
+++ b/todo/www/index.html
@@ -23,7 +23,7 @@
         <!-- your app's js -->
         <script src="js/app.js"></script>
     </head>
-    <body ng-app="todo">
+    <body ng-app="todo" ng-controller="TodoCtrl">
         <ion-side-menus>
 
             <ion-side-menu-content>
@@ -31,6 +31,11 @@
                     <h1 class="title">Todo</h1>
                 </ion-header-bar>
                 <ion-content>
+                    <ion-list>
+                        <ion-item ng-repeat="task in tasks">
+                            {{task.title}}
+                        </ion-item>
+                    </ion-list>
                 </ion-content>
             </ion-side-menu-content>
 
