--- a/todo/www/index.html
+++ b/todo/www/index.html
@@ -28,14 +28,17 @@
 
             <ion-side-menu-content>
                 <ion-header-bar class="bar-dark">
-                    <h1 class="title">Todo</h1>
+                    <button class="button button-icon" ng-click="toggleProjects()">
+                        <i class="icon ion-navicon"></i>
+                    </button>
+                    <h1 class="title">{{activeProject.title}}</h1>
                     <button class="button button-icon" ng-click="newTask()">
                         <i class="icon ion-compose"></i>
                     </button>
                 </ion-header-bar>
                 <ion-content>
                     <ion-list>
-                        <ion-item ng-repeat="task in tasks">
+                        <ion-item ng-repeat="task in activeProject.tasks">
                             {{task.title}}
                         </ion-item>
                     </ion-list>
@@ -45,7 +48,16 @@
             <ion-side-menu side="left">
                 <ion-header-bar class="bar-dark">
                     <h1 class="title">Projects</h1>
+                    <button class="button button-icon ion-plus" ng-click="newProject()">
+                    </button>
                 </ion-header-bar>
+                <ion-content scroll="false">
+                    <ion-list>
+                        <ion-item ng-repeat="project in projects" ng-click="selectProject(project, $index)" ng-class="{active: activeProject == project}">
+                            {{project.title}}
+                        </ion-item>
+                    </ion-list>
+                </ion-content>
             </ion-side-menu>
 
         </ion-side-menus>
