--- a/playSound/www/index.html
+++ b/playSound/www/index.html
@@ -15,20 +15,25 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- ngCordova -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
 
+  <body ng-app="playSound">
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Play a sound</h1>
       </ion-header-bar>
       <ion-content>
+        <button>Play</button>
       </ion-content>
     </ion-pane>
   </body>
+
 </html>
