--- a/playSound/www/index.html
+++ b/playSound/www/index.html
@@ -30,8 +30,9 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title">Play a sound</h1>
       </ion-header-bar>
-      <ion-content>
+      <ion-content ng-controller="ExampleController">
         <button>Play</button>
+        <button class="button" ng-click="play('http://www.stephaniequinn.com/Music/Commercial%20DEMO%20-%2013.mp3')">Play from internet</button>
       </ion-content>
     </ion-pane>
   </body>
