--- a/playSound/www/index.html
+++ b/playSound/www/index.html
@@ -31,7 +31,8 @@
         <h1 class="title">Play a sound</h1>
       </ion-header-bar>
       <ion-content ng-controller="ExampleController">
-        <button class="button" ng-click="play('/android_asset/www/audio/some-demo.mp3')">Play from internet</button>
+        <button class="button" ng-click="play('/android_asset/www/audio/some-demo.mp3')">Play from file</button>
+        <button class="button" ng-click="stop()">Stop it!</button>
       </ion-content>
     </ion-pane>
   </body>
