--- a/playSound/www/index.html
+++ b/playSound/www/index.html
@@ -26,15 +26,37 @@
   </head>
 
   <body ng-app="playSound">
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Play a sound</h1>
-      </ion-header-bar>
-      <ion-content ng-controller="ExampleController">
-        <button class="button" ng-click="play('/android_asset/www/audio/some-demo.mp3')">Play from file</button>
-        <button class="button" ng-click="stop()">Stop it!</button>
-      </ion-content>
-    </ion-pane>
+
+    <div class="list card">
+
+        <div class="item item-avatar">
+            <img src="img/small-dog.jpg" />
+            <h2>Dog!</h2>
+            <p>Wouf! wouf!</p>
+        </div>
+
+        <div class="item item-body">
+            <img class="full-image" src="img/dog.jpg" />
+            <p>Help your kid to say that in English</p>
+        </div>
+
+        <div class="item tabs tabs-secondary tabs-icon-left">
+            <a class="tab-item" href="#">
+                <i class="icon ion-play"></i>
+                Play
+            </a>
+            <a class="tab-item" href="#">
+                <i class="icon ion-stop"></i>
+                Stop
+            </a>
+            <a class="tab-item" href="#">
+                <i class="icon ion-help-circled"></i>
+                Help
+            </a>
+        </div>
+
+    </div>
+
   </body>
 
 </html>
