Call play() and stop() methods

--- a/playSound/www/index.html
+++ b/playSound/www/index.html
@@ -41,11 +41,11 @@
         </div>
 
         <div class="item tabs tabs-secondary tabs-icon-left">
-            <a class="tab-item" href="#">
+            <a class="tab-item" href="#" ng-click="play('/android_asset/www/audio/some-demo.mp3')">
                 <i class="icon ion-play"></i>
                 Play
             </a>
-            <a class="tab-item" href="#">
+            <a class="tab-item" href="#" ng-click="stop()">
                 <i class="icon ion-stop"></i>
                 Stop
             </a>
