Add a factory to handle different words in the vocabulary. Add a method in the  to move from word to word

--- a/playSound/www/index.html
+++ b/playSound/www/index.html
@@ -45,9 +45,9 @@
                   <i class="icon ion-play"></i>
                   Play
               </a>
-              <a class="tab-item" href="#" ng-click="stop()">
-                  <i class="icon ion-stop"></i>
-                  Stop
+              <a class="tab-item" href="#" ng-click="next()">
+                  <i class="icon ion-skip-forward"></i>
+                  Next
               </a>
               <a class="tab-item" href="#">
                   <i class="icon ion-help-circled"></i>
